# Lab-Sistemas-de-Vision-FIME

./: README.md  practica_1.py  practica_2.py  pyproject.toml
Clase/Actividad_1/: traslacion.py
Clase/Actividad_2/: rotacion.py  traslacion.py
Clase/Actividad_3/: proyeccion.py
Clase/Actividad_4/: histograma.py
Clase/Actividad_5/: filtro copy.py  filtro.py
Clase/Actividad_6/: binarizacion.py
Lab/: pia.py  pia_2.py  practica7.ipynb  practica_3.py  practica_4.py  practica_6.py  practica_8.ipynb
Practica_1/: practica_1.py
